centering all image titles and spacing issues now resolved for chuzoff game

--- a/web-client/public/stylesheets/chuzr.styl
+++ b/web-client/public/stylesheets/chuzr.styl
@@ -89,7 +89,13 @@ a:hover
   background-color:rgba(19,164,157, .12)
 
 .page-title
-  padding-left: 40%
+  height: 55px
   padding-top: 10px
   padding-bottom: 10px
   background-color: rgba(0, 0, 0, 0.2)
+
+.page-title img
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
